added rakefile and gemfile fixed issue in generated Context.

--- a/lib/robotlegs/generators/templates/RobotlegsMain.mxml
+++ b/lib/robotlegs/generators/templates/RobotlegsMain.mxml
@@ -8,10 +8,8 @@
                height="768"
                backgroundColor="0xFFFFFF"
                pageTitle="<%= project_name.camel_case %>"
-               preloader=""
                usePreloader="true"
-               applicationComplete="<%= project_name.camel_case %>CompleteHandler()"
-               currentState="">
+               applicationComplete="<%= project_name.camel_case %>CompleteHandler()">
 
     <fx:Declarations>
 
