--- a/lib/robotlegs/generators/templates/RobotlegsMain.mxml
+++ b/lib/robotlegs/generators/templates/RobotlegsMain.mxml
@@ -1,7 +1,7 @@
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
                xmlns:s="library://ns.adobe.com/flex/spark"
                xmlns:mx="library://ns.adobe.com/flex/mx"
-               xmlns:context="<% if package_name != "" %><%= package_name %>.<% end %><%= project_name.camel_case %>Context"
+               xmlns:context="<%= context_package %>"
                minWidth="800"
                minHeight="600"
                width="1024"
