--- a/lib/robotlegs/generators/templates/RobotlegsModuleMain.mxml
+++ b/lib/robotlegs/generators/templates/RobotlegsModuleMain.mxml
@@ -1,8 +1,8 @@
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
                xmlns:s="library://ns.adobe.com/flex/spark"
                xmlns:mx="library://ns.adobe.com/flex/mx"
-               xmlns:context="<%= context_package %>"
-			   xmlns:views="<%= view_package %>"
+               xmlns:context="<%= context_package_name %>"
+			   xmlns:views="<%= view_package %>.*"
                minWidth="800"
                minHeight="600"
                width="1024"
